derive/tests/ui/attr-missing-rpc-name.stderr
error: rpc attribute should have a name e.g. `name = "method_name"`
 --> $DIR/attr-missing-rpc-name.rs:7:2
  |
7 |       /// Returns a protocol version
  |  _____^
8 | |     #[rpc]
9 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
